--- a/src/components/Amenities.astro
+++ b/src/components/Amenities.astro
@@ -1,5 +1,5 @@
 ---
-
+import BgImg from '../assets/24A_CDM_R10_CASA_C-1.jpg'
 ---
 
 <div id="amenities" class="relative h-screen z-30 overflow-hidden">
@@ -53,7 +53,7 @@
     </div>
 
     <div class="absolute left-0 top-0 w-full h-auto -z-30 opacity-60">
-        <img src="src/assets/24A_CDM_R10_CASA_C-1.jpg" alt="">
+        <img src={BgImg.src} alt="">
     </div>
 </div>
 
