--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import Location from '../components/Location.astro';
 import Footer from '../components/Footer.astro';
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="Alia Residencial.">
 	<HeroSlide client:load/>
 
 	<Amenities />
