Se modificaron y añadieron modelos

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,5 +1,5 @@
 ---
-
+import Logo from '../assets/Aliia_logo_blanco.png'
 ---
 <div class="relative">
     <div>
@@ -7,7 +7,7 @@
     </div>
     <div class="relative bg-[#13151a] flex justify-between p-4 z-10">
         <div class="w-52">
-            <img src="src/assets/Aliìa_logo_blanco.png" alt="">
+            <img src={Logo.src} alt="">
         </div>
         <div class="px-20 text-center">
             <nav class="text-white space-x-4">
